Added cool color change feature, fixed responsive blocks overlapping.

--- a/pyramid-slide.html
+++ b/pyramid-slide.html
@@ -35,12 +35,14 @@
                                                      padding: 15px;
                                                     }
                                                     #brickCan {
-                                                margin-left: -800px;
+                                                margin-left: 20%;
                                             }
                                     #colorPicker {
-                                         width: 30%;
+                                         width: 42%;
                                          float: left;
-                                         margin-left: 20px;
+                                         position: relative;
+                                         margin-left: 5px;
+                                         margin-left -40px;
                                             }
                                 #showheight {
                             font-size: 25px;
@@ -56,14 +58,24 @@
      #hexinfo, span {
     color: #000;
     }
+    #red, #green, #blue { max-width: 75px;
+    display: inline;
+    
+    }
+#container {
+max-width:auto;
+min-width: 1500px;
+
+}
 
 
                                                  </style>
                                                </head>
                                             <body>
+                                          <div id="container">
                                          <header>Pyramid Slide</header>
                                        <div id="contentarea">
-                                    <div id="slideform"
+                                    <div id="slideform">
                                       <form id="draw-form">
                                         <div id="colorPicker">
                                            <label for="red">Red</label>
@@ -103,6 +115,7 @@
                                                     <div id="pyramid"></div>
                                                        </div><script src="pyramid-slide.js">
                                                          </script>
-                                                            </body>
-                                                               </html>
+                                                            </div>
+                                                               </body>
+                                                                 </html>
   
